--- a/lipstr/lists/templates/home.html
+++ b/lipstr/lists/templates/home.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
+{% load gravatar %}
 
 {% block header %}
 <header>
     <div id="header-content">
         <a id="logo-header" href="/"> </a>
         <div id="menu">
-            <div id="username">{% if user.first_name %}{{user.first_name|capfirst}}{% else %}{{user.username}}{% endif %}</div>
+            
+            <div id="username">
+                <img id="profile_image" src="{% gravatar_url user.email %}">
+                {% if user.first_name %}{{user.first_name|capfirst}}{% else %}{{user.username}}{% endif %}
+            </div>
            
             <ul id="menu-dropdown">
                 <li><a href="{% url disconnect %}">Sign out</a></li>
