Updated the look of lists and changed the background

--- a/lipstr/lists/templates/fragments/list.html
+++ b/lipstr/lists/templates/fragments/list.html
@@ -28,7 +28,8 @@
                                                     
                                                 },
                                                dblclick: function(e) { console.log('dblclick'); },
-                                               longclick: function(e) { $data.editItem($parent); }},
+                                               longclick: function(e) { $data.editItem($parent); },
+                                               rightclick: function(e) { console.log('rightclick'); }},
                                    attr: {'data-id': id}">
                     </li>
                     
