--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -121,7 +121,7 @@ html, body {}
 body{ 
 	font:12px/20px 'Open Sans', Helvetica, Helvetica Neue, Arial;
 	/*font:12px/20px RobotoRegular, Helvetica, Helvetica Neue, Arial;*/
-    background: url(../img/backgrounds/furley_bg.png);
+    background: url(../img/backgrounds/rough_diagonal.png);
 }
 p { margin: 0; }
 a { text-decoration: none; }	
@@ -530,20 +530,27 @@ button.sp-choose { .button3d-thin; }
 
 
 li.list {
+    @border-radius: 2px;
+        
 	width: 360px;
-    margin: 1em 0;
+    margin: 0.75em 0;
     padding-top: 4px;   /* prevent the shadows from being in the wrong column */
+    
+    /*&.minimized {
+        ul.list-inner, .add-task { display: none; }
+    }*/
     
     .li-wrapper {
         background-color: white;
         box-shadow: hsla(0, 15%, 12%, 0.4) 0px 1px 3px 0px; 
-        
+        .border-radius(@border-radius);
     }
     
     .li-header { 
         @list-header-height: 26px;
         
-        
+        box-shadow: inset rgba(255, 255, 255, 0.65) 0px 1px 0px;
+        .border-radius(@border-radius);
         font-family: 'Open Sans Condensed', sans serif;
         overflow: hidden;
         margin: 0;
