now crossing items

--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -632,6 +632,10 @@ li.list {
                 border-top: 3px solid @greyborder;
             }
             
+            &.crossed {
+                text-decoration: line-through;
+            }
+            
             &:hover {
                cursor: pointer;
                .transition;
