--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -74,6 +74,7 @@ if (navigator.userAgent.toLowerCase().indexOf("chrome") >= 0) {
 	});}
 </script>
 
+{% block template-custom-js %}{% endblock %}
 {% block custom-js %}{% endblock %}
 
 
