--- a/lipstr/lists/templates/signup.html
+++ b/lipstr/lists/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends "login.html" %}
 
-{% block custom-js %}
+{% block template-custom-js %}
     
     <script>
         var SIGNUP_URL = '{% url signup %}';
