drag and drop destination

--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -57,7 +57,8 @@
 <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
 <!-- js libs -->
-<script src="{{STATIC_URL}}js/libs/jquery.masonry.min.js"></script>
+{# <script src="{{STATIC_URL}}js/libs/jquery.masonry.min.js"></script> #}
+<script src="{{STATIC_URL}}js/masonry.js"></script>
 <script src="{{STATIC_URL}}js/libs/jquery.robertclick.js"></script>
 
 <script src="{{STATIC_URL}}js/utils.js"></script>
