--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -526,6 +526,16 @@ input[type="text"], input[type="password"] {
 button.sp-choose { .button3d-thin; }
 
 
+#block-placeholder {
+    position: absolute;
+    z-index: 205;
+    border: 2px dashed rgba(170, 170, 170, 0.4);
+    .border-radius(4px);	
+    width: 360px;
+    height: 60px;
+    margin: 10px 0 0 0;
+}
+
 #list-container {
     width: 100%;
     /*max-width: 400px;*/
