list drag and drop working

--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -529,10 +529,10 @@ button.sp-choose { .button3d-thin; }
 #block-placeholder {
     position: absolute;
     z-index: 205;
-    border: 2px dashed rgba(170, 170, 170, 0.4);
+    border: 2px dashed rgba(170, 170, 170, 0.4)
+    ;
     .border-radius(4px);	
     width: 360px;
-    height: 60px;
     margin: 10px 0 0 0;
 }
 
