--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -1,10 +1,10 @@
 <!doctype html>
 {# <html class="no-js" lang="en" manifest="static/cache.manifest"> #} 
 
-<html class="no-js" lang="en">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<!-- meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" -->
 
 	<title>Lipstr - Make Lists</title>
 	<meta name="description" content="">
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width">
     
     <!-- Fonts -->
-    <link rel="stylesheet/less" href="static/fonts/roboto/stylesheet.css">
+    <link rel='stylesheet' type='text/css' href="static/fonts/roboto/stylesheet.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
     {% block custom-css-files %}{% endblock %}
@@ -20,10 +20,12 @@
     <!-- Less stylesheets  -->
     
     
+	<link rel="stylesheet/less" href="{{STATIC_URL}}bootstrap/less/bootstrap.less">
 	<link rel="stylesheet/less" href="{{STATIC_URL}}less/style.less">
-	<script src="{{STATIC_URL}}js/libs/less-1.2.2.min.js"></script>
+	<script src="{{STATIC_URL}}js/libs/less-1.3.0.min.js"></script>
 	
     {% block custom-css %}{% endblock %}
+    
     
 	{% comment %}<!-- Use SimpLESS (Win/Linux/Mac) or LESS.app (Mac) to compile your .less files
 	to style.css, and replace the 2 lines above by this one:
@@ -31,7 +33,7 @@
 	 -->{% endcomment %}
     <script language="Javascript" type="text/javascript">var STATIC_URL = "{{STATIC_URL}}";</script>
     <script src="{{STATIC_URL}}js/libs/knockout-2.0.0.min.js"></script>
-	<script src="{{STATIC_URL}}js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
+	<script src="{{STATIC_URL}}js/libs/modernizr-2.6.2.js"></script>
     
     <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" />
     
@@ -62,6 +64,11 @@
 <script src="{{STATIC_URL}}js/libs/jquery.robertclick.js"></script>
 
 <script src="{{STATIC_URL}}js/utils.js"></script>
+
+
+{# Boostrap plugins #}
+<script src="{{STATIC_URL}}bootstrap/js/bootstrap-dropdown.js"></script>
+
 
 <script>
 if (navigator.userAgent.toLowerCase().indexOf("chrome") >= 0) {
