--- a/lipstr/lists/templates/fragments/list.html
+++ b/lipstr/lists/templates/fragments/list.html
@@ -1,4 +1,5 @@
 
+
 <div id="list-container">
     
     <ul data-bind="foreach: tasklists, visible: tasklists().length > 0">
@@ -76,7 +77,7 @@
 <div id="item-edit" class="popup" style="display: none;">
     <h3>Edit Item</h3>
     <div id="item-edit-content" class="popup-content">
-        <input type="text" name="description" data-property="description">
+        <textarea type="text" name="description" data-property="description"></textarea>
     </div>
     <div id="item-edit-menu" class="popup-menu">
         <input class="button3d-thin" type="submit" value="save">
