--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -574,6 +574,7 @@ li.list {
         border-top: 1px solid @greyborder; 
         border: 0;*/
         text-align: center;
+        background-color: transparent;
     }
 }
 
