--- a/lipstr/lists/static/less/header.less
+++ b/lipstr/lists/static/less/header.less
@@ -1,11 +1,143 @@
 
+.highlight-menu {
+    /*box-shadow: #8F8A8A 0px 1px 1px, inset #F3F2F2 0px 1px;*/
+    background-color: #CECECE;
+}
+
+
+
 .navbar, .navbar-inner {
     .border-radius(0px);
 }
 
 .navbar {
     .navbar-inner {
-        background-color: transparent;
-        background-image: none;
+        width: 60%;
+        border-bottom: 1px solid lightGrey;
+        background: #E2E2E2;
+        border-left: 1px solid lightGrey;
+        border-top: 1px solid #F7F7F7;
+        margin: auto;
+        border-right: 1px solid lightGrey;
+        border-bottom-right-radius: 2px;
+        border-bottom-left-radius: 2px;
+    }
+}
+
+
+.navbar {
+    
+    .brand {
+        font-family: Arvo;
+        letter-spacing: -2px;
+        font-size: 26px;
+        color: @darkgrey;
+        padding: 4px 20px 4px;
+    }
+    
+    
+    .navbar-inner {
+        .box-shadow(initial);
+        min-height: 36px;
+    }
+    
+    
+    .divider-vertical {
+        background-color: whiteSmoke;
+        border-right: 1px solid #C9C9C9;
+        height: 36px;
+    }
+    
+    .dropdown-menu {
+        > li {
+            a:hover {
+                color: white;
+            }
+        }
+    }
+    
+    .nav {
+        .dropdown-menu {
+            > li {
+                a:hover {
+                    color: white;
+                    text-shadow: initial;
+                }
+            }
+        }
+        
+        &.nav-pills {
+            li.dropdown {
+                &.open, &:hover {
+                    .dropdown-toggle {
+                        background-color: rgba(243, 240, 240, 0.78);
+                    }
+                }
+                
+                a.dropdown-toggle {
+                    padding: 7px 10px 10px;
+                    
+                    .caret {
+                        opacity: 1;
+                        color: white;
+                        border-top-color: white;
+                        margin-left: 6px;
+                        margin-top: 9px;
+                    }
+                }
+            }
+        }
+        
+        li {
+            &.dropdown {
+                &.open, &:hover {
+                    .dropdown-toggle {
+                        background-color: rgba(243, 240, 240, 0.78);
+                    }
+                }
+                
+                a.dropdown-toggle {
+                    padding: 7px 10px 10px;
+                    
+                    .caret {
+                        opacity: 1;
+                        color: gray;
+                        border-top-color: gray;
+                        margin-left: 6px;
+                    }
+                }
+            }
+            
+            a {
+                color: @navbarcolor;
+                text-shadow: 0 1px 0 rgba(250, 250, 250, 0.63);
+                
+                &:hover {
+                    color: @navbarcolor;
+                }
+            }
+        }
+    }
+    
+    #board-list {
+        margin: 4px 10px 0 0;
+            
+        > li {
+            
+            &.active > a, &.active > a:hover { 
+                background-color: @blue2;
+                text-shadow: initial;
+                color: white
+            }
+                
+            > a {
+                padding: 2px 10px 3px;
+                 
+                &:hover {
+                    .highlight-menu;
+                    color: @navbarcolor;
+                }
+            }
+        }
     }
 }
