--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -55,8 +55,11 @@
     
 
 <!-- Additional javascript -->
+{% comment %}
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/libs/jquery-1.7.1.min.js"><\/script>')</script>
+{% endcomment %}
+<script src="{{STATIC_URL}}js/libs/jquery-1.7.1.min.js"></script>
 
 <!-- js libs -->
 {# <script src="{{STATIC_URL}}js/libs/jquery.masonry.min.js"></script> #}
