--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -36,6 +36,7 @@
 	<script src="{{STATIC_URL}}js/libs/modernizr-2.6.2.js"></script>
     
     <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" />
+    <link rel="icon" type="image/png" href="{{STATIC_URL}}img/logo.png" />
     
     {% include 'fragments/googleanalytics.html' %}
 </head>
