--- a/lipstr/lists/templates/signup.html
+++ b/lipstr/lists/templates/signup.html
@@ -11,16 +11,15 @@
 {% endblock %}
 
 {% block login %}
-    
+<section id="login" class="signup-page">  
     <form id="signup">{% csrf_token %}
-        <label for="email">Email Address</label>
-        <input type="text" id="email" name="email">
         
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password">
+        <h2>A new user? Awesome! <br>All you need is an email address and a password to get started</h2>
+    
+        <input type="text" id="email" name="email" placeholder="Email address">
+        <input type="password" id="password" name="password" placeholder="Password">
         
-        <label for="firstname">Display name (optional)</label>
-        <input type="text" id="firstname" name="firstname">
+        {# <input type="text" id="firstname" name="firstname"> #}
         
         <div id="submit-wrapper"><input type="submit" value="Create account"></div>
         
@@ -28,5 +27,5 @@
         
         <div id="errors"></div>
     </form>
-    
+</section>
 {% endblock %}
