--- a/lipstr/lists/static/less/login.less
+++ b/lipstr/lists/static/less/login.less
@@ -155,9 +155,10 @@
 #login.signup-page {
     background-position: 50% 22px;
     padding-top: 180px;
-
+    
     #signup {
         padding-top: 23px;
+        padding-bottom: 0;
         border-top: 2px solid rgba(91, 163, 188, 0.41);
         width: 100%;
         
