--- a/lipstr/lists/templates/base.html
+++ b/lipstr/lists/templates/base.html
@@ -35,8 +35,8 @@
     <script src="{{STATIC_URL}}js/libs/knockout-2.0.0.min.js"></script>
 	<script src="{{STATIC_URL}}js/libs/modernizr-2.6.2.js"></script>
     
-    <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" />
-    <link rel="icon" type="image/png" href="{{STATIC_URL}}img/logo.png" />
+    <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico?v2" />
+    <link rel="icon" type="image/png" href="{{STATIC_URL}}img/logo.png?v2" />
     
     {% include 'fragments/googleanalytics.html' %}
 </head>
