--- a/lipstr/lists/static/less/login.less
+++ b/lipstr/lists/static/less/login.less
@@ -171,11 +171,15 @@
             text-shadow: rgba(255, 255, 255, 0.56) 0px 1px 0px;
         }
         
-        input[type=text], input[type=password] { 
+        .signup-field-wrapper {
+            margin-left: 22%;
             width: 52%;
+        }
+        
+        input[type=text], input[type=password] { 
+            width: 100%;
             font-size: 16px;
             height: 27px;
-            margin-left: 22%;
             padding: 5px 4px;
         }
         
