--- a/lipstr/lists/static/less/style.less
+++ b/lipstr/lists/static/less/style.less
@@ -64,7 +64,7 @@ input:-moz-placeholder {
     &:active {
         .box-shadow(inset rgba(255, 255, 255, 0.5) 0px 1px 0px);
         margin-top: 2px;
-        margin-bottom: -2px;
+        //margin-bottom: -2px;
         height: 54px;
     }
 }
@@ -272,7 +272,9 @@ li.list {
     @border-radius: 2px;
         
 	width: 360px;
-    margin: 0.75em 0;
+    
+    /*margin: 0.75em 0;*/
+    
     padding-top: 4px;   /* prevent the shadows from being in the wrong column */
     
     /*&.minimized {
